[netty-common,netty-client,netty-server]优化代码